[SalvageUnion] fix notes tab visibility

--- a/SalvageUnion/SalvageUnion.css
+++ b/SalvageUnion/SalvageUnion.css
@@ -44,6 +44,7 @@ input[type="checkbox"] {
 .pilot,
 .mech,
 .crawler,
+.notes,
 .settings
  {
     display: none;
@@ -58,6 +59,7 @@ input[type="checkbox"] {
 .tabstoggle[value="pilot"] ~ div.pilot,
 .tabstoggle[value="mech"] ~ div.mech,
 .tabstoggle[value="crawler"] ~ div.crawler,
+.tabstoggle[value="notes"] ~ div.notes,
 .tabstoggle[value="settings"] ~ div.settings
  {
     display: block;
